infrastructure/base/cilium-policies/allow-kube-system.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-kube-system-egress
spec:
  description: "Allow kube-system pods full cluster and world access"
  endpointSelector:
    matchLabels:
      io.kubernetes.pod.namespace: kube-system
  ingress:
    - fromEntities:
        - cluster
        - world
  egress:
    - toEntities:
        - cluster
        - world
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-ingress-from-gateway
spec:
  description: "Allow all pods to accept ingress from Cilium Envoy gateway pods in kube-system (HTTPRoute path)"
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            app.kubernetes.io/name: cilium-envoy
