infrastructure/base/cilium-policies/kyverno-reporter.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: kyverno-reporter
  namespace: kyverno-reporter
spec:
  endpointSelector: {}
  ingress:
    - fromEntities:
        - cluster
  egress:
    - toEntities:
        - kube-apiserver
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
