infrastructure/base/cilium-policies/kyverno.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: kyverno
  namespace: kyverno
spec:
  endpointSelector: {}
  ingress:
    - fromEntities:
        - kube-apiserver
  egress:
    - toEntities:
        - kube-apiserver
