infrastructure/base/cilium-policies/longhorn.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: longhorn
  namespace: longhorn-system
spec:
  endpointSelector: {}
  ingress:
    - fromEntities:
        - kube-apiserver
  egress:
    - toEntities:
        - kube-apiserver
